# pg_aya_tinkering

./: README.md
kernel_user_ringbuf/: Cargo.toml  README.md
kernel_user_ringbuf/kernel_user_ringbuf/: Cargo.toml  build.rs
kernel_user_ringbuf/kernel_user_ringbuf-common/: Cargo.toml
kernel_user_ringbuf/kernel_user_ringbuf-ebpf/: Cargo.toml
kernel_user_ringbuf/kernel_user_ringbuf-ebpf/src/: main.rs
kernel_user_ringbuf/kernel_user_ringbuf/src/: main.rs
postdrop_demo/: Cargo.toml  README.md
postdrop_demo/postdrop/: Cargo.toml  build.rs
postdrop_demo/postdrop-common/: Cargo.toml
postdrop_demo/postdrop-ebpf/: Cargo.toml
postdrop_demo/postdrop-ebpf/src/: main.rs
postdrop_demo/postdrop/src/: main.rs
postsniff_demo/: Cargo.toml  README.md
postsniff_demo/postsniff_demo/: Cargo.toml  build.rs
postsniff_demo/postsniff_demo-common/: Cargo.toml
postsniff_demo/postsniff_demo-ebpf/: Cargo.toml
postsniff_demo/postsniff_demo-ebpf/src/: main.rs
postsniff_demo/postsniff_demo/src/: main.rs
presentation/: main.typ
simple-uprobe-backup/: Cargo.toml  README.md  main.c  test_program
simple-uprobe-backup/simple-uprobe-backup/: Cargo.toml  build.rs
simple-uprobe-backup/simple-uprobe-backup-common/: Cargo.toml
simple-uprobe-backup/simple-uprobe-backup-ebpf/: Cargo.toml
simple-uprobe-backup/simple-uprobe-backup-ebpf/src/: main.rs
simple-uprobe-backup/simple-uprobe-backup/src/: main.rs
